--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,69 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-799.1KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-389.2KB/s(Youtube:不良林), server: scloud56.jafiyun.life, port: 22056, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud56.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.59MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-815.1KB/s(Youtube:不良林), server: scloud57.jafiyun.life, port: 22057, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud57.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.79MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.94MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20120, type: trojan, password: f788c9d5-2100-4378-b3b2-5e7ed9de9150, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-992.2KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇨🇳 台湾-1.38MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-3.90MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.26MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-1.98MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-815.1KB/s(Youtube:不良林), server: scloud57.jafiyun.life, port: 22057, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud57.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-799.1KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.38MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.11MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.64MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-417.6KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.38MB/s(Youtube:不良林) 2, server: 5.44.249.43, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-417.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-417.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-417.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -75,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-417.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-417.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-417.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-992.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-815.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-799.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-417.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
