--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-158.0KB/s(Youtube:不良林), server: 213.183.59.214, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇨🇳 台湾-1.38MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-2.97MB/s(Youtube:不良林), server: 116.129.253.201, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-621.4KB/s(Youtube:不良林), server: scloud57.jafiyun.life, port: 22057, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud57.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.00MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-712.0KB/s(Youtube:不良林), server: blr.alinkrelay.com, port: 12000, type: trojan, password: 2a65c21b-5e04-4fb2-86d8-53cc1f456dfb, sni: blr.alinkrelay.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.46MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.97MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇨🇳 中国-497.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇸🇬 新加坡-371.5KB/s(Youtube:不良林), server: 81.90.189.33, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇳🇱 荷兰-445.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇨🇳 中国-3.29MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-413.9KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇨🇳 中国-3.30MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 柬埔寨-1.73MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 443, type: trojan, password: b8d5a1e1-17cb-3200-afb6-a9463692b83a, sni: kh1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.85MB/s(Youtube:不良林), server: 103.56.60.235, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.83MB/s(Youtube:不良林), server: 103.56.60.235, port: 3385, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.67MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-158.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇮🇳 印度-712.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 柬埔寨-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.67MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-158.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇮🇳 印度-712.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 柬埔寨-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.67MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-158.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇮🇳 印度-712.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 柬埔寨-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.67MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-158.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇮🇳 印度-712.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 柬埔寨-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.67MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-158.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇮🇳 印度-712.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 柬埔寨-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.67MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-158.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇮🇳 印度-712.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 柬埔寨-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.67MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-158.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
-      - 🇮🇳 印度-712.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 柬埔寨-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.67MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
