--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇳🇱 荷兰-445.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 🇨🇳 中国-10.58MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.39MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.50MB/s(Youtube:不良林), server: 103.56.60.185, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 柬埔寨-1.73MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 443, type: trojan, password: b8d5a1e1-17cb-3200-afb6-a9463692b83a, sni: kh1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.85MB/s(Youtube:不良林), server: 103.56.60.235, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.83MB/s(Youtube:不良林), server: 103.56.60.235, port: 3385, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-3.67MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.33MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.51MB/s(Youtube:不良林), server: 116.129.253.201, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.11MB/s(Youtube:不良林), server: 103.56.60.235, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-908.6KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 台湾-1.02MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-630.7KB/s(Youtube:不良林), server: 185.167.116.24, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.37MB/s(Youtube:不良林), server: 213.183.53.177, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 柬埔寨-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-908.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-630.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 柬埔寨-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-908.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-630.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,19 +53,21 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 柬埔寨-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-908.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-630.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-908.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.02MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -73,30 +75,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 柬埔寨-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-908.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-630.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 柬埔寨-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-908.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-630.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +106,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 柬埔寨-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-908.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-630.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +131,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇳🇱 荷兰-445.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活3天)中国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 柬埔寨-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-908.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-630.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.37MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
